--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -60,4 +60,4 @@ obj-y				+= cardreader/
 obj-$(CONFIG_PVPANIC)   	+= pvpanic.o
 obj-$(CONFIG_HABANA_AI)		+= habanalabs/
 obj-$(CONFIG_XILINX_SDFEC)	+= xilinx_sdfec.o
-obj-y				+= intel_expender.o
+obj-y				+= intel_extender.o
