Extender POC: the demo for Kris
The demo comprises the 'extender' driver and 'extender client' driver.
The client driver accesses the FPGA memory while the 'extender' handles
the dirty work of mapping/unmapping the page tables and steering the
'extender' device to satisfy the client requests.

Signed-off-by: Marek Bykowski <marek.bykowski@gmail.com>

--- a/arch/arm64/boot/dts/intel/socfpga_agilex.dtsi
+++ b/arch/arm64/boot/dts/intel/socfpga_agilex.dtsi
@@ -101,6 +101,10 @@
 			      <0x90000000 0xfffffff>; /*Address span extender windowed slave*/
 			reg-names = "control", "windowed_slave";
 			fpga_address_space = <0x0000000 0x000000000 0x00000080 0x10000000>;
+
+			extenderclient: extenderclient {
+				compatible = "intel,extender-client";
+			};
 		};
 
 		clkmgr: clock-controller@ffd10000 {
